--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "next-text",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "m.test"
+    "test": "m.test",
+    "m.test": "m.test"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "m.test": "0.0.53"
   }
