--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "next-text",
   "version": "0.0.2",
-  "description": "[![Build Status](https://travis-ci.org/christian-fei/next-text.svg?branch=master)](https://travis-ci.org/christian-fei/next-text)",
+  "description": "nextText is a small utility function to get the next letter from a partial string",
   "main": "index.js",
   "scripts": {
     "test": "m.test",
     "m.test": "m.test"
   },
-  "keywords": [],
+  "keywords": ["utility","typewriter","string utility", "utils"],
   "author": "Christian Fei",
   "license": "MIT",
   "devDependencies": {
